fixed issue in index with dropdown alignment

--- a/public/htmlbackup/css/mainstyle.css
+++ b/public/htmlbackup/css/mainstyle.css
@@ -68,12 +68,7 @@ hr {
 .btn-transparent:hover {
     border-color: rgba(255, 255, 255, 0.5);
 }
-a:hover,
-a:focus {
-    color: #111;
-    text-decoration: none;
-    outline: none;
-}
+
 .dropdown-menu {
     margin-top: -1px;
     min-width: 180px;
@@ -139,6 +134,7 @@ a:focus {
         transform: scale(1);
     }
 }
+
 #header .search {
     display: inline-block;
 }
@@ -497,9 +493,10 @@ hr {
 }
 
 /**********CSS OF HOME PAGE************/
-/*.force_btn{
-    margin-left: -220px;
-}*/
+.navbar-inverse .navbar-toggle {
+    border-color: #333;
+    background-color: #F26722 !important;
+}
 .home_select_area{
     text-align: center;
     padding-bottom: 40px;
@@ -669,6 +666,8 @@ small{
 
 .new_btn{
     margin-left: 10px;
+    width: 17%;
+    display: inline-block;
 }
 /*.text_new_area{
     margin-left: 50px;
@@ -780,6 +779,10 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
 .select_brand input{
     display:none;
 }
+.brand_request img{
+    width:261px;
+    height:161px;
+}
 
 
 /**********CSS OF DEALER REQUEST LIST PAGE************/
@@ -805,7 +808,8 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
     border-bottom:1px dotted #F26722;
 }
 .text_new_area{
-    margin-left: 26px;
+    width: 17%;
+    display: inline-block;
 }
 .text_new_area h3{
     color: #000;
@@ -821,7 +825,7 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
     /*padding-top: 10px;*/
 }
 .submit_btn li a:hover, .submit_btn li a:focus{
-    color: #fff;
+    color: #fff !important;
     background-color:#F26722;
 }
 .i-c{
@@ -867,9 +871,9 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
 .c-p-b{
     color: rgb(51, 51, 51);
     background-color: rgba(230, 230, 230, 0.01);
-    /*border-color: rgb(242, 103, 34);*/
     padding: 4px;
     font-size:10px;
+    margin-bottom: 5px;
 }
 .accept{
     border-color: rgb(23, 87, 28);
@@ -886,6 +890,7 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
 .c-p-b:hover, .c-p-b:focus{
     border-color: rgb(242, 103, 34);
 }
+.
 
 /**********CSS OF CLIENT ADD OPTION PAGE************/
 .client-add{
@@ -894,7 +899,7 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
     margin-top: 50px;
     padding: 15px;
     border-radius: 7px;
-}
+} 
 .font-a{
     margin-left: 10px;
     margin-right: 2px;
